<resources xmlns:xliff="http://schemas.android.com/apk/res-auto">

    <!-- App -->
    <string name="app_keep">Keep</string>
    <string name="app_history">History</string>

    <!-- Nav -->
    <string name="nav_vod">Vod</string>
    <string name="nav_hot">Hot</string>
    <string name="nav_live">Live</string>
    <string name="nav_setting">Setting</string>

    <!-- Menu -->
    <string name="menu_sync">Sync</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_search">Search</string>
    <string name="menu_site">Site</string>
    <string name="menu_reset">Reset</string>

    <!-- Vod -->
    <string name="vod_home">Home</string>

    <!-- Hot -->
    <string name="hot_all">All</string>
    <string name="hot_movie">Movies</string>
    <string name="hot_tv">TV</string>
    <string name="hot_show">Shows</string>
    <string name="hot_anime">Anime</string>
    <string name="hot_radar">New Radar</string>
    <string name="hot_info">Info</string>
    <string name="hot_photos">Photos</string>
    <string name="hot_search_watch">Search to watch</string>
    <string name="hot_load_failed">Hot recommendations failed. Tap empty area to retry.</string>
    <string name="hot_score">Score: %s</string>
    <string name="hot_director">Director: %s</string>
    <string name="hot_writer">Writer: %s</string>
    <string name="hot_actor">Cast: %s</string>
    <string name="hot_genre">Genre: %s</string>
    <string name="hot_country">Country/Region: %s</string>
    <string name="hot_language">Language: %s</string>
    <string name="hot_pubdate">Release: %s</string>
    <string name="hot_episode">Episodes: %s</string>
    <string name="hot_episode_count">%d episodes</string>
    <string name="hot_duration">Duration: %s</string>
    <string name="hot_aka">AKA: %s</string>
    <string name="hot_imdb">IMDb: %s</string>

    <!-- Detail -->
    <string name="detail_flag">Flag</string>
    <string name="detail_still">Stills</string>
    <string name="detail_episode">Episode</string>
    <string name="detail_quality">Quality</string>
    <string name="detail_content">Summary</string>
    <string name="detail_search">Searching <xliff:g name="name">%s</xliff:g></string>

    <!-- Device -->
    <string name="device_select">Select devices</string>
    <string name="device_offline">Device is offline</string>
    <string name="device_scan">Please scan QR Code to bind</string>

    <!-- Control -->
    <string name="control_speed">Speed</string>
    <string name="control_scale">Scale</string>
    <string name="control_track">Track</string>
    <string name="control_other">Other</string>

    <!-- Dialog -->
    <string name="dialog_delete_record">Delete all records?</string>
    <string name="dialog_delete_keep">All keep records will be removed.</string>
    <string name="dialog_delete_history">All history records will be removed.</string>

    <!-- Timer -->
    <string name="timer_5">5 minutes</string>
    <string name="timer_15">15 minutes</string>
    <string name="timer_30">30 minutes</string>
    <string name="timer_60">1 hour</string>
    <string name="timer_delay">Add 5 minutes</string>
    <string name="timer_cancel">Cancel timer</string>

    <!-- Hint -->
    <string name="shortcut">Shortcut has been added.</string>

    <string-array name="select_background">
        <item>Off</item>
        <item>On</item>
        <item>PiP</item>
    </string-array>

    <!-- Reader -->
    <string name="reader_menu">Reader Menu</string>
    <string name="reader_horizontal">Horizontal</string>
    <string name="reader_vertical">Vertical</string>
    <string name="reader_previous">Previous</string>
    <string name="reader_directory">Directory</string>
    <string name="reader_next">Next</string>
    <string name="reader_wallpaper">Set as Wallpaper</string>
    <string name="reader_wallpaper_loading">Setting wallpaper...</string>
    <string name="reader_wallpaper_done">Wallpaper set successfully</string>
    <string name="reader_wallpaper_failed">Failed to set wallpaper</string>

    <string-array name="select_picture_reader_mode">
        <item>Normal</item>
        <item>Background Only</item>
    </string-array>

</resources>
